removed the paths to k8s mans and ans  in front pipe
running few tests.

running few tests.

running few tests.

Change in a path to ansible playbook.

No changes.

changed the port to 8888 and removed nodeport.

Changing the H1 in index.html.

Frontend Pipeline Schema

The pipeline is designed to automate various stages of the development process, ensuring efficient, error-free deployment of the frontend service.

Workflow:
The pipeline is triggered on every push to the repository, specifically when changes are made to the paths within app/frontend-service. The pipeline consists of several jobs, each handling a specific part of the CI/CD process:

1. EditorConfig Check
Purpose: Ensures that the .editorconfig file exists and adheres to predefined coding styles.
Environment: Ubuntu-latest.
Steps: Checkout code, verify .editorconfig presence, and run editorconfig checker.

2. Linter
Purpose: Performs code linting to maintain code quality.
Environment: Ubuntu-latest.
Steps: Setup Python environment, install dependencies, and run linters using Black.

3. Unit Tests
Purpose: Executes unit tests to ensure code reliability.
Environment: Ubuntu-latest.
Dependencies: EditorConfig and Linter jobs.
Steps: Setup Python, install requirements, and run unit tests.

4. Security Scan
Purpose: Scans the codebase for security vulnerabilities using Gitleaks.
Environment: Ubuntu-latest.
Dependencies: EditorConfig, Linter, and Unit Tests jobs.

5. Code Smells
Purpose: Detects potential bugs and code smells using SonarCloud.
Environment: Ubuntu-latest.
Dependencies: EditorConfig, Linter, and Unit Tests jobs.

6. Build and Push
Purpose: Builds the Docker image and pushes it to a Docker registry.
Environment: Ubuntu-latest.
Dependencies: EditorConfig, Linter, Unit Tests, Security Scan, and Code Smells jobs.
Steps: Checkout code, set up Docker Buildx, log in to DockerHub, and build and push the Docker image.

7. Security Scan on Docker Image
Purpose: Performs a security scan on the Docker im

--- a/.github/workflows/frontend_pipeline.yml
+++ b/.github/workflows/frontend_pipeline.yml
@@ -6,8 +6,6 @@ on:
       - 'app/frontend-service/**' 
       - 'app/frontend-service/**.py'
       - 'app/frontend-service/templates/**.html'
-      - 'kubernetes/frontend-deploy.**'
-      - 'ansible/deploy-frontend.**'
 
 jobs:
   editorconfig:
@@ -88,7 +86,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  build-push-test:
+  build-push:
     runs-on: ubuntu-latest
     needs: [editorconfig, linter, unit-tests, scan, code-smells]
 
@@ -114,6 +112,10 @@ jobs:
           tags: '${{ secrets.DOCKERHUB_USERNAME }}/frontend-service:${{ github.sha }}'
           platforms: linux/amd64
 
+  security-scan: 
+    runs-on: ubuntu-latest
+    needs: [build-push]
+    steps:
       - name: Scan with trivy
         id: trivy
         uses: aquasecurity/trivy-action@master
@@ -199,7 +201,7 @@ jobs:
 
   deploy-app:
     runs-on: ubuntu-latest
-    needs: [building-infrastructure, configure-vm, build-push-test]
+    needs: [building-infrastructure, configure-vm, build-push, security-scan]
     steps: 
       - name: Checkout repository
         uses: actions/checkout@v4
